Add build and prepublishOnly scripts

--- a/client/gutenberg/extensions/presets/jetpack/package.json
+++ b/client/gutenberg/extensions/presets/jetpack/package.json
@@ -4,6 +4,8 @@
 	"description": "Gutenberg Blocks for the Jetpack WordPress Plugin",
 	"main": "editor.js",
 	"scripts": {
+		"build": "../../../../../bin/sdk-cli.js gutenberg .",
+		"prepublishOnly": "npm run build",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"repository": {
