--- a/client/gutenberg/extensions/presets/jetpack/package.json
+++ b/client/gutenberg/extensions/presets/jetpack/package.json
@@ -4,7 +4,7 @@
 	"description": "Gutenberg Blocks for the Jetpack WordPress Plugin",
 	"main": "editor.js",
 	"scripts": {
-		"build": "../../../../../bin/sdk-cli.js gutenberg .",
+		"build": "../../../../../bin/sdk-cli.js gutenberg client/gutenberg/extensions/presets/jetpack/",
 		"prepublishOnly": "npm run build",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
