--- a/client/gutenberg/extensions/presets/jetpack/package.json
+++ b/client/gutenberg/extensions/presets/jetpack/package.json
@@ -7,7 +7,7 @@
 		"access": "public"
 	},
 	"scripts": {
-		"build": "../../../../../bin/sdk-cli.js gutenberg client/gutenberg/extensions/presets/jetpack/",
+		"build": "../../../../../bin/sdk-cli.js gutenberg .",
 		"prepublishOnly": "npm run build",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
